    - update debian/patches/plugin-for-mimetype.patch
    - update debian/patches/firefox-kde.patch 
    - update debian/patches/mozilla-kde.patch
  * Drop StartupWMClass from the desktop file, as it isn't actually
    required by gnome shell or unity
    - update debian/firefox.desktop.in
  * Build depend on libxml-simple-perl
    - update debian/control{,.in}

 -- Chris Coulson <chris.coulson@canonical.com>  Thu, 07 Jun 2012 22:29:53 +0100

firefox-trunk (15.0~a1~hg20120603r95688-0ubuntu1) quantal; urgency=low

  * New upstream snapshot v15.0 A1 HG20120603R95688

  * Update globalmenu-extension to 3.2.4 prerelease r339
  * Fix LP: #993273 - Exception thrown in Apport hook with preferences
    which have empty values
    - update debian/apport/source_firefox.py.in
  * Report errors when parsing preferences and plugins in the Apport hook
    - update debian/apport/source_firefox.py.in
  * Handle line breaks in preference files
    - update debian/apport/source_firefox.py.in
  * Don't build with --enable-thumb2 on armel in Quantal
    - update debian/rules
    - update debian/config/mozconfig.in
  * Separate the package name from the application name. This enables us to
    change the package name without having to modify the application (eg,
    to allow us to provide official branded versions of Firefox ESR using
    the package name "firefox-esr"). In doing this, also drop the patch we
    had to rename Firefox in nightlies, and just use some magic in debian/rules
    instead
    - update debian/README.Debian.in
    - update debian/apport/source_firefox.py.in
    - update debian/build/get-orig-source.mk
    - update debian/control{,.in}
    - update debian/control.langpacks
    - update debian/control.langpacks.unavail
    - update debian/firefox-locale.preinst.in
    - update debian/firefox.install.in
    - update debian/firefox.links.in
    - update debian/firefox.lintian-overrides.in
    - update debian/firefox.postinst.in
    - update debian/firefox.postrm.in